# joplin-importer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml  requirements-lock.txt  requirements-windows-lock.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLI.md  CONFLICTS.md  FULL_EXPORT.md  MATCHING.md  ONENOTE_BACKUP.md  ONENOTE_COM_KNOWN_ISSUE.md  ONENOTE_QUARANTINE.md  RELEASE_PROCESS.md  SECURITY.md  SNAPSHOT_FORMAT.md  STATE_MODEL.md  WINDOWS_TESTING.md  WORKSPACE_FORMAT.md
examples/: agent-session.md
schemas/: apply-receipt.schema.json  approval-file.schema.json  audit-result.schema.json  dry-run-receipt.schema.json  error-record.schema.json  export-apply-receipt.schema.json  export-approval.schema.json  export-dry-run-receipt.schema.json  export-plan.schema.json  export-validation-report.schema.json  finding.schema.json  journal-entry.schema.json  manifest.schema.json  match-result.schema.json  note-record.schema.json  onenote-quarantine.schema.json  page-record.schema.json  repair-plan.schema.json  scan-metadata.schema.json
scripts/: build_standalone.py  check_version_increment.py  standalone_entry.py  verify_release.py
src/joplin_importer/: __init__.py  schemas.py  secretstore.py  transport.py
src/joplin_importer/cli/: main.py
src/joplin_importer/exporting/: __init__.py  content.py  executor.py  models.py  planner.py  validation.py
src/joplin_importer/matching/: assignment.py  audit.py  detection.py  engine.py  features.py  results.py  scoring.py  semantic_diff.py
src/joplin_importer/models/: __init__.py  enums.py  hashing.py  records.py  snapshot.py  timeutil.py
src/joplin_importer/normalization/: __init__.py  html_parser.py  markdown_parser.py  model.py  onenote_parser.py  page_refs.py  textnorm.py
tests/: fake_graph.py  fake_joplin.py  fake_onenote.py  fake_onenote_backup.py
tests/integration/: test_audit_flow.py  test_cli.py  test_executor.py  test_full_export.py  test_live_smoke.py
tests/unit/: test_assignment.py  test_detection.py  test_graph_scanner.py  test_hashing.py  test_joplin_scanner.py  test_matching.py  test_no_secrets_tracked.py  test_normalization.py  test_onenote_backup.py  test_onenote_com.py  test_reports_and_plan.py  test_schemas.py  test_secretstore.py  test_snapshot.py  test_timeutil.py  test_transport.py  test_verify_release.py  test_version.py  test_version_increment.py
(+21 files in other folders)
