[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "joplin-importer"
# Single source of truth: the root .version file (see docs/RELEASE_PROCESS.md).
dynamic = ["version"]
description = "Analyze OneNote/Joplin snapshots and export a complete OneNote backup into Joplin."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [{ name = "kogeler" }]
keywords = ["onenote", "joplin", "migration", "audit", "recovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
    "defusedxml>=0.7",
    "jinja2>=3.1",
    "msal>=1.28",
    "pywin32>=306; sys_platform == 'win32'",
    "aspose-note==26.3.2",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pip-tools>=7.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/kogeler/joplin-importer"
Changelog = "https://github.com/kogeler/joplin-importer/blob/main/CHANGELOG.md"

[project.scripts]
joplin-importer = "joplin_importer.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ".version" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "windows_only: tests that require Windows and the OneNote desktop application",
    "live_joplin: opt-in smoke tests against a live local Joplin instance (Windows test machine only)",
]
addopts = "-m 'not live_joplin'"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "S101", # assert use is fine in this codebase and tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B017"]

[tool.mypy]
python_version = "3.14"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["aspose.*", "defusedxml.*", "win32com.*", "pythoncom", "msal"]
ignore_missing_imports = true
